2015-12-26  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* pngimage.c: Workaround for Adobe Potoshop generated PNGs which have
	cHRM chunk but not gAMA chunk.
	* agl.c, spc_pdfm.c, unicode.c, unicode.h: Addition of some
	Unicode related functions. Try conversion to UTF16BE only for string
	objects which can be considered as a valid Unicode text.

2015-12-24  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* t1_load.c: Support for get/putinterval and get/put in encoding
	definition found in some Type1 fonts such as cmctt10.pfb.

2015-11-05  Karl Berry  <karl@tug.org>

	* data/dvipdfmx.cfg (D): add -dAutoRotatePages=/None.
	Suggestion/request from Akira, 4 Nov 2015 22:41:14.

2015-09-27  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* dvipdfmx.c: Remove conditional error message in kpathsea_debug,
	since there should be no errors.

2015-08-25  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Most .c and .h files: Update Copyright years.
	Replace '(unsigned) long' by '(unsigned) int' or '(u)int32_t'
	except when needed with for ftell() and fseek().

2015-08-23  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* agl.[ch], cid.[ch], cidtype0.[ch], cidtype2.[ch], cmap_p.h,
	cs_type2.[ch], dpxcrypt.[ch], dpxutil.[ch], dvi.c, fontmap.[ch],
	otl_conf.c, pdfcolor..[ch], pdfdev.h, pdfdoc.c, pdfencoding.c,
	pdfencrypt.[ch], pdfnames.[ch], pdfobj.[ch], sfnt.h, spc_pdfm.c,
	spc_xtx.c, truetype.c, t1_char.[ch], tt_cmap.[ch], unicode.[ch]:
	No reason to use 'long' for 32-bit integers.

	* system.h: Moved #undef's for Win32 symbols from here ...
	* error.h, mpost.c: ... to here.

2015-08-21  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* dvipdfmx.c (main): Drop CDECL.
	* agl.c, otl_opt.c, pdfencoding.c, pdfnames.c, pdfobj.c,
	t1_char.c, tt_cmap.c, tt_glyf.c:
	Replace 'static <TYPE> CDECL' => 'static inline <TYPE>'.
	* system.h: Drop __cdecl and CDECL.

2015-08-14  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* pdfcolor.[ch]: Drop unused pdf_color_set_default().
