@@ -25,6 +25,7 @@
 
 #include <stdio.h>
 
+
 /* Here is the complete list of PDF object types */
 
 #define PDF_BOOLEAN     1
@@ -41,6 +42,7 @@
 #define PDF_OBJ_INVALID 0
 
 #define STREAM_COMPRESS (1 << 0)
+#define STREAM_USE_PREDICTOR   (1 << 1)
 
 /* A deeper object hierarchy will be considered as (illegal) loop. */
 #define PDF_OBJ_MAX_DEPTH  30
@@ -160,10 +162,9 @@ extern void        pdf_stream_set_flags  (pdf_obj *stream, int flags);
 extern int         pdf_stream_get_flags  (pdf_obj *stream);
 #endif
 extern const void *pdf_stream_dataptr    (pdf_obj *stream);
-
-#if 0
-extern int         pdf_stream_pop_filter (pdf_obj *stream);
-#endif
+extern void        pdf_stream_set_predictor (pdf_obj *stream,
+                                             int predictor, int32_t columns,
+                                             int bpc, int colors);
 
 /* Compare label of two indirect reference object.
  */
@@ -173,6 +174,7 @@ extern int         pdf_compare_reference (pdf_obj *ref1, pdf_obj *ref2);
  */
 
 extern void      pdf_set_compression (int level);
+extern void      pdf_set_use_predictor (int bval);
 
 extern void      pdf_set_info     (pdf_obj *obj);
 extern void      pdf_set_root     (pdf_obj *obj);
